# MAPF-Transformer

./: .gitattributes  .gitignore  DATA_GENERATION_README.md  README.md  VALIDATION.md  data_generation_requirements.txt
mapf-transformer-policy/: .gitignore  LICENSE  PACKED_DATASET.md  README.md  UPSTREAM_REFERENCES.md  inference.py  pack_dataset.py  plot_training_metrics.py  prepare_agent_latent_grid.py  pyproject.toml  requirements.txt  run_agent_latent_grid.sh  train.py  upgrade_neighbor_tracking.py
mapf-transformer-policy/configs/: ablation_baseline_latent16.yaml  ablation_map_latent32.yaml  ablation_map_latent32_one_hop_ctg.yaml  ablation_one_hop_ctg.yaml  agent25_map32_history10_random.yaml  agent25_map32_history5_full.yaml  agent25_map32_history5_random.yaml  agent25_map32_history8_random.yaml  agent_field8_raw_1h.yaml  agent_latent_grid_raw_1h.yaml  agent_query_map32_agent25_history8_graph_r3_raw_1h.yaml  agent_query_map32_agent25_raw_1h.yaml  agent_query_map32_agent32_history5_raw_1h.yaml  agent_query_map32_agent32_raw_1h.yaml  experiment1_grouped_metadata.yaml  experiment2_graph_attention_l1.yaml  experiment3_grouped_metadata_graph_l1.yaml  mapf_transformer_base.yaml  mapf_transformer_base_1h.yaml  mapf_transformer_base_goal_wait20.yaml  packed_baseline_latent16.yaml  packed_baseline_latent16_150m.yaml  packed_baseline_latent16_150m_maze90.yaml  packed_baseline_latent16_1h_eb2048.yaml  packed_experiment1_grouped_metadata.yaml  packed_experiment2_graph_attention_l1.yaml  packed_experiment3_grouped_metadata_graph_l1.yaml  packed_experiment3_grouped_metadata_graph_l1_latent32_eb256.yaml  small.yaml  (+8 more)
pogema-mapf-transformer/: .gitignore  README.md  benchmark_compare.py  generate_dataset.py  generate_grid_dataset.py  inference.py  plot_benchmark_results.py  plot_latent_ablation_comparison.py  plot_three_ablation_comparison.py  plot_three_model_comparison.py  plot_trained_model_comparison.py  pyproject.toml  requirements-benchmark.txt  requirements.txt  train.py
(+7803 files in other folders)
