[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mapf-transformer-policy"
version = "0.1.0"
description = "Hierarchical spatio-temporal Transformer policy for multi-agent pathfinding"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "MAPF Transformer project"}]
dependencies = [
  "numpy>=1.24",
  "torch>=2.1",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
mapf-transformer-train = "mapf_transformer.training:main"
mapf-transformer-infer = "mapf_transformer.cli_inference:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
